--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=kyosk
-spring.data.mongodb.uri=mongodb://admin:password123@localhost:27017/mydatabase
+spring.data.mongodb.uri=mongodb://admin:password123@localhost:27017/mydatabase?authSource=admin&retryWrites=true&w=majority
 spring.data.mongodb.database=mydatabase
 
