Add payment worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,35 +12,23 @@ services:
       MONGO_INITDB_DATABASE: mydatabase
     volumes:
       - ./data/db:/data/db
-    platform: linux/arm64  # Ensure it's running on ARM64 platform
-
-  temporal:
-    image: temporalio/server
-    container_name: temporal_container
-    ports:
-      - "7233:7233"
-    environment:
-      - TEMPORAL_DB=cassandra
-    volumes:
-      - ./temporal.yaml:/etc/temporal/config.yaml  # Mount the config file
-      - ./wait-for-cassandra.sh:/wait-for-cassandra.sh  # Mount the wait script
-    depends_on:
-      - cassandra  # Depends on Cassandra
-    command: [ "/bin/sh", "-c", "/wait-for-cassandra.sh cassandra_container temporal-server start" ]
-    platform: linux/amd64
-
-
-  cassandra:
-    image: cassandra:latest
-    container_name: cassandra_container
-    ports:
-      - "9042:9042"
-    environment:
-      CASSANDRA_CLUSTER_NAME: "TemporalCluster"
-      CASSANDRA_PASSWORD_SEEDER: "true"
-    volumes:
-      - cassandra_data:/var/lib/cassandra
     platform: linux/arm64
 
-volumes:
-  cassandra_data:
+  temporal:
+    # https://hub.docker.com/r/temporalio/server/tags
+    image: temporalio/server:1.21.5.0
+    container_name: temporal_container
+    restart: on-failure
+    user: "0:0" # running as root to avoid permission issues with writing to /tmp/sqlite/db
+    entrypoint:
+      - temporal
+      - server
+      - start-dev
+      - --namespace=default
+      - --db-filename=/tmp/sqlite/db
+      - --ip=0.0.0.0
+    tmpfs:
+      - /tmp/sqlite
+    ports:
+      - "7233:7233"
+      - "8233:8233"
